--- a/config/locales/eng.yml
+++ b/config/locales/eng.yml
@@ -3,3 +3,6 @@ eng:
     cap_trap_short_description: Pest trap
     cap_trap_long_description:  CapTrap is an automated moth trap whose data can be used in Ekylibre.
     cap_trap_url: http://sd-71360.dedibox.fr/wordpress/
+  integrations:
+    cap_trap:
+      api_key: API key
